# mcp-filesystem-rust

./: .gitignore  AGENTS.md  Cargo.toml  MIGRATION.md  README.md  audit.toml  tools.json
homebrew-mcp-filesystem/: README.md
homebrew-mcp-filesystem/Formula/: mcp_filesystem.rb
src/: config.rs  errors.rs  http.rs  lib.rs  main.rs  protocol.rs  server.rs  structures.rs  tls.rs  tools.rs  validation.rs
src/actions/: crypto.rs  csv.rs  files.rs  mod.rs
tests/: compliance.rs  integration.rs
