[package]
name = "mcp-filesystem"
version = "1.2.0"
edition = "2024"
authors = ["Piyush"]
description = "High-performance MCP server for filesystem access with parallel async I/O, glob search, media detection, and secure path sandboxing"
repository = "https://github.com/corporatepiyush/mcp-filesystem-rust"
homepage = "https://github.com/corporatepiyush/mcp-filesystem-rust"
license = "Apache-2.0"
readme = "README.md"
keywords = ["mcp", "filesystem", "server", "json-rpc", "file-io"]
categories = ["filesystem", "web-programming::http-server"]
include = ["src/", "tools.json", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "io-util", "net", "time", "sync", "io-std", "fs", "process"] }

# HTTP (JSON-RPC over POST /rpc)
axum = "0.7"
hyper = { version = "1.0", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"

# JSON-RPC and Protocol
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.10", features = ["v4"] }
walkdir = "2.5"
globset = "0.4"
filetime = "0.2"
same-file = "1.0"
content_inspector = "0.2"
infer = "0.18"
sha2 = "0.10"
hex = "0.4"
base64-simd = "0.8"
regex = "1.11"

digest = "0.10"
blake3 = "1.5"
md-5 = "0.10"

# Compression
flate2 = "1.0"
zstd = "0.13"
tar = "0.4"

# CSV
csv = "1.3"

# Encryption / Decryption
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
rsa = { version = "0.9", features = ["pem"] }
pqcrypto-mlkem = "0.1"
pqcrypto-traits = "0.3"
rand = "0.8"
zeroize = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Memory Allocator
mimalloc = { version = "0.1", features = ["local_dynamic_tls", "extended", "override"] }

# Zero-copy file I/O
memmap2 = "0.9"

# System
num_cpus = "1.16"
subtle = "2.6.1"
cap-std = "4.0.2"

[dev-dependencies]
criterion = "0.5"

[lints.clippy]
large_stack_frames = "warn"
large_enum_variant = "warn"
boxed_local = "warn"
box_collection = "warn"
redundant_clone = "warn"
needless_pass_by_value = "warn"
trivially_copy_pass_by_ref = "warn"
unnecessary_to_owned = "warn"
implicit_clone = "warn"
iter_overeager_cloned = "warn"
ptr_arg = "warn"
missing_const_for_fn = "warn"
cast_lossless = "warn"
cast_precision_loss = "warn"
unnecessary_cast = "warn"
vec_init_then_push = "warn"
string_add_assign = "warn"
inefficient_to_string = "warn"
manual_memcpy = "warn"
useless_vec = "warn"
slow_vector_initialization = "warn"
manual_find_map = "warn"
manual_filter_map = "warn"
mutex_atomic = "warn"
option_option = "warn"

[[bin]]
name = "mcp-filesystem"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false

[profile.bench]
inherits = "release"
debug = true
